# backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 008d6d109a43_init_db.py  14f417b15c69_change_user_id_column_in_.py  1ee35eea40d9_edit_datetime_column_for_project.py  25cf391c421a_init.py  26d9cc7a8558_add_additional_fields_to_verification_.py  2aae53cfea78_edit_columns.py  30aca4b1063d_add_is_completed_and_is_submitted_.py  40a7cb35f41e_merge_heads.py  48d198d20ccf_add_user_id_to_token_table.py  5b982fc26e62_add_new_foreign_key_rules_to_.py  64e02abcf18e_add_school_column_to_intern_table.py  84d452fc6885_add_timezone_to_datetime_column_in_.py  8cb3c8f82bb3_fix_todo_intern_relationship.py  8dc64676560b_remove_department_foreign_key_from_.py  a9fb2b8981d8_made_user_dob_column_non_nullable.py  b7ab3a731021_remove_division_table_add_department_.py  b94cbe88a3aa_add_new_table_to_link_intern_and_.py  bd3a6fc36231_add_normalized_email_column_to_user_.py  bf5d678d5912_convert_intern_supervisor_datetime_.py  d1da2d07104d_create_todo_table.py  d400e5ab41bb_add_verification_code_model.py  d8c84a795eb7_add_new_attrs_to_intern_model.py  d9a4f802177c_refactor_user_model_to_contain_division_.py  db8074ba9d9d_major_refactor_of_tables.py  ef008177a6e7_add_new_association_tables.py  f0ea3957b5e0_add_new_fields_to_user_model.py  fdaf2669ee0f_add_supervisor_foreign_key_to_intern.py  fe88785efeee_remove_intern_supervisor_table.py  fef96c00464b_create_token_table.py
scripts/: prestart.sh
src/: common.py  logger.py  main.py  matching.py  matching_ml_model.py  settings.py  utils.py
src/db/: __init__.py  models.py
src/infra/: email.py  token.py
src/models/: __init__.py  app_models.py  intern_model.py
src/repositories/: __init__.py  base_repo.py  general_user_repo.py  intern_repo.py  intern_repository.py  milestone_repo.py  note_repo.py  (+9 more)
templates/: email_verified.html  forgot_password.html  updated_user.html  verify_email.html
tests/: README.md  conftest.py  tests_utils.py
(+37 files in other folders)
