[project]
name = "internship-matching-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.2",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "orjson>=3.11.3",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "abs2rel>=1.1.0",
    "icecream>=2.1.7",
]
